0.4.0-beta4:
[CLIENT]
+ Add support for saving session information to remove the need to re-type your password.
+ Add support for no backgrounds and .jpg backgrounds.

0.4.0-beta3:
[CLIENT]
+ Fix loading Minecraft 1.6 when server is down
+ Fix path creation on some Windows configurations.
[SERVER]
+ Add custom default JVM arguments in AsieLauncher/config.json
/ WARNING: 1.6.2 libraries are now put in AsieLauncher/libs, and JAR patches are put in AsieLauncher/jarPatches!

0.4.0-beta2:
[SERVER]
* Fix a copypasting mistake.

0.4.0-beta:
- SOLARIS HAS BEEN DEPRECATED!
[CLIENT]
+ Implement Yggdrasil authentication.
+ Add 1.6 Minecraft launcher code.
+ Rewrite JAR repacking to actually work.
+ Automatically download LiteLoader for .litemods.
  (BETA: Requires Forge to work for now)
[SERVER]
+ Lets you dump web server files to a directory: node also -l
+ Show debug messages with -d.

0.3.1:
* Bump config revision to 5.
[CLIENT]
+ Add JAR repacking functionality.
+ Add minecraft.jar downloading functionality (also caches them AsieLauncher-wide).
+ Checks for modpack MC version and quits if unsupported.
/ Refactoring...
[SERVER]
+ Added pretty colors to output.
+ Now sends list of ZIPs to add to minecraft.jar.
+ Sends MC version of the modpack to client.
+ Orders JAR patches in the user-specified order; see jarPatchOrder in server config.
* Moved client_revision to also.js.

0.3.0:
* Bump config revision to 4.
[CLIENT]
+ Modify and/or generate servers.dat based on data sent from the server to the client.
* Show proper changelog filesize.
* Fix launching while internet is down.
/ Code refactoring, somewhat.
[SERVER]
+ Send a serverlist to the client.
* Fixed the whole code after accidentally moving files to AsieLauncher/ wrong.
/ Move onlineMode option from client to server. Makes more sense that way.

0.2.5:
[CLIENT]
+ Add changelog.
+ Add "Launch Only" option while holding Control.
* Fix options GUI look.
[SERVER]
/ Move files to AsieLauncher/, mostly.

0.2.4:
[CLIENT]